welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:6: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
	for (i <- 1 to hauteur)
        ^Array1:7: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
	{
        ^